<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Světice → Praha</string>
    <string name="route_label">Světice → Praha</string>
    <string name="widget_description">Nejbližší vlaky ze Světic do Prahy</string>
    <string name="config_title">Nastavení widgetu</string>
    <string name="active_days">Aktivní dny</string>
    <string name="time_window">Časové okno</string>
    <string name="from_label">Od</string>
    <string name="to_label">Do</string>
    <string name="save_button">Uložit</string>
    <string name="day_mo">Po</string>
    <string name="day_tu">Út</string>
    <string name="day_we">St</string>
    <string name="day_th">Čt</string>
    <string name="day_fr">Pá</string>
    <string name="day_sa">So</string>
    <string name="day_su">Ne</string>
</resources>
